include_directories(${CMAKE_SOURCE_DIR})

add_subdirectory(document)

add_subdirectory(cursor)
add_subdirectory(dataframe)
add_subdirectory(expressions)
add_subdirectory(index)
add_subdirectory(log)
add_subdirectory(logical_plan)
add_subdirectory(oid)
add_subdirectory(physical_plan)
add_subdirectory(physical_plan_generator)
add_subdirectory(planner)
add_subdirectory(ql)
add_subdirectory(session)
add_subdirectory(sql)
add_subdirectory(types)

if (DEV_MODE)
    add_subdirectory(tests)
endif()
