#TODO: FIX
#set(ENV{INTERNAL_PLUGINS} "")
#file(GLOB children RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *)
#foreach(child ${children})
#    if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/${child}")
#        if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${child}/CMakeLists.txt")
#            add_subdirectory("${child}")
#            set(ENV{INTERNAL_PLUGINS} "$ENV{INTERNAL_PLUGINS};${child}")
#        endif()
#    endif()
#endforeach()

add_subdirectory(header/rocketjoe/services/http_server)
add_subdirectory(header/rocketjoe/services/lua_engine)
add_subdirectory(header/rocketjoe/services/python_sandbox)
add_subdirectory(header/rocketjoe/services/router)